Fixed small but furious bug with z-indexes

--- a/public/styles/table.css
+++ b/public/styles/table.css
@@ -9,7 +9,6 @@
 .comgrid-cell {
     min-width: 32px;
     max-width: 32px;
-    z-index: 1;
     border-color: rgba(10, 10, 10, 25);
     cursor: context-menu;
 }
